1998-02-16  Jim Kingdon  <kingdon@harvey.cyclic.com>

	* rcs.c (RCS_checkout): Comment return value (0/1, not -1).
	* commit.c, diff.c, mkmodules.c, patch.c, rcs.c, update.c: Update
	to match this convention.  Don't suppress errors based on
	quiet or really_quiet variables.

	Fix a longstanding bug which also makes stamps-8kw in make
	remotecheck work again (it stopped working with Ian's 8 Feb 98
	checkin):
	* client.c, client.h (change_mode): If new argument respect_umask
	is set, then honor the umask.
	* client.c, server.c: Update callers.

	Cleanups to Tim's checkin:
	* rcs.c (RCS_checkout): Use existence_error not ENOENT.
	* commit.c (checkaddfile): Remove comment about whether we want to
	check for errors from fclose; there is no reason not to.
	* rcs.c (RCS_checkout), update.c (special_file_mismatch): sscanf
	on %ld requires an unsigned long, not a dev_t.
	* update.c (special_file_mismatch): Remove unused variable
	check_devnums.
	* mkmodules.c (config_contents): Between two settings, use a blank
	line not a "#" line.

1998-02-15  Tim Pierce  <twp@skepsis.com>

	[This is the code as submitted.  I'll be checking in my cleanups
	shortly.  This work sponsored by Abbott Labs.  -kingdon]

	Support for device special files, symbolic links, user and group
	ownerships, and file permissions.
	
	* parseinfo.c: (parse_config): Handle new config variable
	`PreservePermissions'.
	* mkmodules.c (config_contents): Add new PreservePermissions var.

	* rcs.c, rcs.h (preserve_perms): New variable.
	(RCS_checkout, RCS_checkin): Support for newphrases `owner',
	`group', `permissions', `special', `symlink'.
	(RCS_checkout): If `workfile' and `sout' are symlinks, remove them
	before attempting to open them for writing.
	* import.c (add_rcs_file): Support for newphrases.  Do not attempt
	to read data from special files or symlinks.  Error message
	`cannot fstat' is now `cannot lstat'.

	New metrics for deciding when two files are different:
